IMPALA-4039: Increase width of Operator column in runtime profile

This patch changes the maximum column width in impala::PrintExecSummary
from 30 to 1000. It affects:
1. Summary page in web UI
2. "ExecSummary" section in runtime profile given by
    1). Profile command in impala-shell
    2). Profile page in web UI
Summary command in impala-shell is unaffected: there isn't a width limit
on client side.

Change-Id: I1ae559913a98e32f77782161aa2b76e7c8a5dabd
Reviewed-on: http://gerrit.cloudera.org:8080/7691
Reviewed-by: Lars Volker <lv@cloudera.com>
Tested-by: Impala Public Jenkins